--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "webpack": "^4.19.1",
     "webpack-cli": "^3.1.1",
     "webpack-dev-server": "^3.2.1",
+    "webpack-merge": "^4.2.1"
   },
   "dependencies": {
     "react": "^16.8.3",
