--- a/package.json
+++ b/package.json
@@ -20,14 +20,20 @@
     "@babel/core": "^7.1.0",
     "@babel/preset-env": "^7.1.0",
     "@babel/preset-react": "^7.0.0",
+    "@types/node": "^11.9.6",
+    "awesome-typescript-loader": "^5.2.1",
     "babel-loader": "^8.0.2",
     "css-loader": "^1.0.0",
+    "source-map-loader": "^0.2.4",
     "style-loader": "^0.23.0",
+    "typescript": "^3.3.3333",
     "webpack": "^4.19.1",
     "webpack-cli": "^3.1.1",
-    "webpack-dev-server": "^3.2.1",
+    "webpack-dev-server": "^3.2.1"
   },
   "dependencies": {
+    "@types/react": "^16.8.6",
+    "@types/react-dom": "^16.8.2",
     "react": "^16.8.3",
     "react-dom": "^16.8.3",
     "react-hot-loader": "^4.7.1"
